--- a/.github/workflows/test-default-action.yml
+++ b/.github/workflows/test-default-action.yml
@@ -4,7 +4,7 @@ env:
   DEFAULT_PERSONAL_ACCESS_KEY: ${{ secrets.HUBSPOT_PERSONAL_ACCESS_KEY }}
   DEFAULT_ACCOUNT_ID: ${{ secrets.HUBSPOT_ACCOUNT_ID }}
   DEFAULT_PROFILE: "prod"
-  DEFAULT_CLI_VERSION: "7.9.0"
+  DEFAULT_CLI_VERSION: "latest"
 
 jobs:
   deploy:
