--- a/project-deploy/action.yml
+++ b/project-deploy/action.yml
@@ -28,6 +28,11 @@ inputs:
     description: "Profile to use for the HubSpot CLI. If not provided, will use DEFAULT_PROFILE from environment."
     required: false
     type: string
+  debug:
+    description: "Enable debug mode for HubSpot CLI commands. Passes --debug flag to all hs commands."
+    required: false
+    default: false
+    type: boolean
 outputs:
   deploy_id:
     description: The deploy ID of the initiated HubSpot project deploy
@@ -46,6 +51,7 @@ runs:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key || env.DEFAULT_PERSONAL_ACCESS_KEY }}
         HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id || env.DEFAULT_ACCOUNT_ID }}
         HUBSPOT_PROFILE: ${{ inputs.profile || env.DEFAULT_PROFILE }}
+        HUBSPOT_DEBUG: ${{ inputs.debug }}
       run: |
         # Source shared utilities
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
