--- a/.github/workflows/test-composed-flow.yml
+++ b/.github/workflows/test-composed-flow.yml
@@ -16,14 +16,17 @@ jobs:
         uses: ./project-validate
         with:
           project_dir: ./.github/workflows/test-project
+          debug: true
       - name: HubSpot Project Upload Action
         id: upload-project-step
         uses: ./project-upload
         with:
           project_dir: ./.github/workflows/test-project
+          debug: true
       - name: HubSpot Project Deploy Action
         if: ${{ steps.upload-project-step.outputs.build_id != '' }}
         uses: ./project-deploy
         with:
           project_dir: ./.github/workflows/test-project
           deploy_latest_build: true
+          debug: true
