--- a/project-validate/action.yml
+++ b/project-validate/action.yml
@@ -40,7 +40,6 @@ runs:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key || env.DEFAULT_PERSONAL_ACCESS_KEY }}
         HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id || env.DEFAULT_ACCOUNT_ID }}
         HUBSPOT_PROFILE: ${{ inputs.profile || env.DEFAULT_PROFILE }}
-        HUBSPOT_DEBUG: ${{ inputs.debug }}
       run: |
         # Source shared utilities
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
@@ -58,6 +57,6 @@ runs:
         fi
 
         # Run validation - command will exit with non-zero if validation fails
-        run_hs_command "hs project validate --use-env $PROFILE_ARG"
+        run_hs_command "hs project validate --use-env $PROFILE_ARG --debug ${{inputs.debug}}"
 
         echo "✅ Project validation completed successfully"
