--- a/project-validate/action.yml
+++ b/project-validate/action.yml
@@ -57,6 +57,6 @@ runs:
         fi
 
         # Run validation - command will exit with non-zero if validation fails
-        run_hs_command "hs project validate --use-env $PROFILE_ARG --debug ${{inputs.debug}}"
+        run_hs_command "hs project validate --use-env $PROFILE_ARG --debug"
 
         echo "✅ Project validation completed successfully"
