--- a/project-upload/action.yml
+++ b/project-upload/action.yml
@@ -45,6 +45,7 @@ runs:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key || env.DEFAULT_PERSONAL_ACCESS_KEY }}
         HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id || env.DEFAULT_ACCOUNT_ID }}
         HUBSPOT_PROFILE: ${{ inputs.profile || env.DEFAULT_PROFILE }}
+        HUBSPOT_DEBUG: ${{ inputs.debug }}
       run: |
         # Source shared utilities
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
@@ -64,7 +65,7 @@ runs:
         # Run upload command
         run_hs_command \
           "hs project upload --force-create --use-env --json --message '${{ github.event.head_commit.message || 'Uploaded via HubSpot GitHub Action' }} (${GITHUB_SHA:0:7})' $PROFILE_ARG" \
-          "true  --debug ${{inputs.debug}}"
+          "true"
 
         # Parse and set outputs
         set_output_from_json "build_id" ".buildId"
