--- a/.github/workflows/test-composed-flow.yml
+++ b/.github/workflows/test-composed-flow.yml
@@ -16,6 +16,7 @@ jobs:
         uses: ./project-validate
         with:
           project_dir: ./.github/workflows/test-project
+          debug: true
       - name: HubSpot Project Upload Action
         id: upload-project-step
         uses: ./project-upload
