--- a/project-upload/action.yml
+++ b/project-upload/action.yml
@@ -22,6 +22,11 @@ inputs:
     description: "Profile to use for the HubSpot CLI. If not provided, will use DEFAULT_PROFILE from environment."
     required: false
     type: string
+  debug:
+    description: "Enable debug mode for HubSpot CLI commands. Passes --debug flag to all hs commands."
+    required: false
+    default: false
+    type: boolean
 outputs:
   build_id:
     description: "The build ID of the created HubSpot project build"
@@ -40,6 +45,7 @@ runs:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key || env.DEFAULT_PERSONAL_ACCESS_KEY }}
         HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id || env.DEFAULT_ACCOUNT_ID }}
         HUBSPOT_PROFILE: ${{ inputs.profile || env.DEFAULT_PROFILE }}
+        DEBUG_MODE: ${{ inputs.debug || env.DEFAULT_DEBUG}}
       run: |
         # Source shared utilities
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
@@ -56,9 +62,15 @@ runs:
           PROFILE_ARG="--profile $HUBSPOT_PROFILE"
         fi
 
+        # Handle debug mode
+        DEBUG_ARG=""
+        if [ "$DEBUG_MODE" = "true" ]; then
+          DEBUG_ARG="--debug"
+        fi
+
         # Run upload command
         run_hs_command \
-          "hs project upload --force-create --use-env --json --message '${{ github.event.head_commit.message || 'Uploaded via HubSpot GitHub Action' }} (${GITHUB_SHA:0:7})' $PROFILE_ARG" \
+          "hs project upload --force-create --use-env --json --message '${{ github.event.head_commit.message || 'Uploaded via HubSpot GitHub Action' }} (${GITHUB_SHA:0:7})' $PROFILE_ARG $DEBUG_ARG" \
           "true"
 
         # Parse and set outputs
