--- a/project-validate/action.yml
+++ b/project-validate/action.yml
@@ -22,6 +22,11 @@ inputs:
     description: "Profile to use for the HubSpot CLI. If not provided, will use DEFAULT_PROFILE from environment."
     required: false
     type: string
+  debug:
+    description: "Enable debug mode for HubSpot CLI commands. Passes --debug flag to all hs commands."
+    required: false
+    default: false
+    type: boolean
 runs:
   using: "composite"
   steps:
@@ -35,6 +40,7 @@ runs:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key || env.DEFAULT_PERSONAL_ACCESS_KEY }}
         HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id || env.DEFAULT_ACCOUNT_ID }}
         HUBSPOT_PROFILE: ${{ inputs.profile || env.DEFAULT_PROFILE }}
+        DEBUG_MODE: ${{ inputs.debug || env.DEFAULT_DEBUG}}
       run: |
         # Source shared utilities
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
@@ -51,7 +57,13 @@ runs:
           PROFILE_ARG="--profile $HUBSPOT_PROFILE"
         fi
 
+        # Handle debug mode
+        DEBUG_ARG=""
+        if [ "$DEBUG_MODE" = "true" ]; then
+          DEBUG_ARG="--debug"
+        fi
+
         # Run validation - command will exit with non-zero if validation fails
-        run_hs_command "hs project validate --use-env $PROFILE_ARG"
+        run_hs_command "hs project validate --use-env $PROFILE_ARG $DEBUG_ARG"
 
         echo "✅ Project validation completed successfully"
