--- a/project-upload/action.yml
+++ b/project-upload/action.yml
@@ -61,15 +61,9 @@ runs:
           PROFILE_ARG="--profile $HUBSPOT_PROFILE"
         fi
 
-        # Handle debug mode
-        DEBUG_ARG=""
-        if [ "$DEBUG_MODE" = "true" ]; then
-          DEBUG_ARG="--debug"
-        fi
-
         # Run upload command
         run_hs_command \
-          "hs project upload --force-create --use-env --json --message '${{ github.event.head_commit.message || 'Uploaded via HubSpot GitHub Action' }} (${GITHUB_SHA:0:7})' $PROFILE_ARG $DEBUG_ARG" \
+          "hs project upload --force-create --use-env --json --message '${{ github.event.head_commit.message || 'Uploaded via HubSpot GitHub Action' }} (${GITHUB_SHA:0:7})' $PROFILE_ARG" \
           "true"
 
         # Parse and set outputs
