--- a/.github/workflows/test-composed-flow.yml
+++ b/.github/workflows/test-composed-flow.yml
@@ -5,7 +5,7 @@ env:
   DEFAULT_ACCOUNT_ID: ${{ secrets.HUBSPOT_ACCOUNT_ID }}
   DEFAULT_PROFILE: "prod"
   DEFAULT_CLI_VERSION: "7.9.0"
-
+  DEFAULT_DEBUG: "true"
 jobs:
   deploy:
     runs-on: ubuntu-latest
