--- a/.github/workflows/scheduled-composed-flow.yml
+++ b/.github/workflows/scheduled-composed-flow.yml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: '0 14 * * 1-5' # Run every weekday at 2:00 PM UTC
+    - cron: '0 14 * * 1,3,5' # Run every Monday, Wednesday, and Friday at 2:00 PM UTC
   workflow_dispatch: # Allow manual triggers
 
 env:
