--- a/.github/workflows/scheduled-composed-flow.yml
+++ b/.github/workflows/scheduled-composed-flow.yml
@@ -18,17 +18,20 @@ jobs:
         uses: ./project-validate
         with:
           project_dir: ./.github/workflows/test-project
+          debug: true
       - name: HubSpot Project Upload Action
         id: upload-project-step
         uses: ./project-upload
         with:
           project_dir: ./.github/workflows/test-project
+          debug: true
       - name: HubSpot Project Deploy Action
         if: ${{ steps.upload-project-step.outputs.build_id != '' }}
         uses: ./project-deploy
         with:
           project_dir: ./.github/workflows/test-project
           deploy_latest_build: true
+          debug: true
       - name: Slack Failure Notification
         uses: ravsamhq/notify-slack-action@v2
         if: failure()
